# Mediclear

./: .gitignore  MediClear_Poster.pptx  README.md  examples.md  pyproject.toml  requirements.txt  simplifier_demo_examples.md  simplifier_examples.md  train_simplifier.py
app/: ._streamlit_app.py  streamlit_app.py
results/: Results.md  neural_health_fact_metrics.csv  neural_health_fact_outputs.csv  neural_simplification_metrics.csv  neural_simplification_outputs.csv
src/: evaluate_simplifier.py  inference_simplifier.py  prepare_data.py
src/mediclear/: neural_pipeline.py
src/mediclear/cli/: __init__.py  evaluate_neural_models.py  prepare_data.py  train_credibility_classifier.py
